style: Use available height in search to prevent results from getting cut off

--- a/app/javascript/scss/elements/_search.scss
+++ b/app/javascript/scss/elements/_search.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 .search {
   position: relative;
   z-index: 10;
@@ -105,27 +107,46 @@
 
 .search__results {
   width: 100%;
-  padding: 0 0 0 1.5rem;
-  max-height: 175px;
+  padding: 0;
+  max-height: 15rem;
   overflow: auto;
 
   @include styled-scrollbar;
+
+  &--empty {
+    padding: math.div($margin, 4) 2rem;
+
+    @include media-min(sm) {
+      padding: math.div($margin, 4) 3rem;
+    }
+  }
 }
 
 .search__item {
   display: block;
   flex: 0 0 100%;
   width: 100%;
-  padding: .25rem 1.5rem;
-  margin: 0 -1.5rem;
+  padding: .25rem 2rem;
   color: $text-color-lightest;
   text-decoration: none;
   font-size: 18px;
+
+  @include media-min(sm) {
+    padding: .25rem 3rem;
+  }
 
   &:hover,
   &:active {
     color: $white;
     background: $bg-dark;
+  }
+
+  &:first-child {
+    margin-top: 1rem;
+  }
+
+  &:last-child {
+    margin-bottom: 1rem;
   }
 }
 
